ckanext/who_afro/assets/css/who-afro.css
/* ... */
.panel-primary {
  border-color: #008dc9;
}

.panel-primary > .panel-heading {
  background-color: #008dc9;
  border-color: #008dc9;
}

.panel-primary > .panel-heading + .panel-collapse > .panel-body {
  border-top-color: #008dc9;
}
.panel-primary > .panel-heading .badge {
  color: #008dc9;
}
.panel-primary > .panel-footer + .panel-collapse > .panel-body {
  border-bottom-color: #008dc9;
}

.banner {
  background-color: #008dc9;
}

.media-view:hover,
.media-view.hovered {
  border-color: #008dc9;
}

.media-view:hover .banner,
.media-view.hovered .banner {
  background-color: #008dc9;
}

.editor .editor-info-block a {
  color: #008dc9;
}

.resource-list.reordering .resource-item.ui-sortable-helper {
  border: 1px solid #008dc9;
}
.resource-list.reordering .resource-item.ui-sortable-helper .handle {
  border-color: #008dc9;
}

.view-list li a.active,
.view-list li a:hover {
  border-color: #008dc9;
}

.view-list li a.active .icon,
.view-list li a:hover .icon {
  background-color: #008dc9;
}

.view-list li .arrow {
  border-top-color: #008dc9;
}

.view-list li.active a {
  border-color: #008dc9;
}
.view-list li.active a .icon {
  background-color: #008dc9;
}

.view-list.stacked::-webkit-scrollbar-thumb:hover {
  background-color: #008dc9;
}

.homepage .module-search .module-content {
  background-color: #008dc9;
}

.popover-followee .nav li a i {
  background-color: #008dc9;
}

.popover-followee .nav li.active a i {
  color: #008dc9;
}

.resource-view-list.reordering li.ui-sortable-helper {
  border: 1px solid #008dc9;
}

.resource-view-list.reordering li.ui-sortable-helper .handle {
  border-color: #008dc9;
}

@media (max-width: 991px) {
.site-search {
    display: none;
  }
}

body {
    background: #fff;
    font-family: 'Source Sans 3 VF', serif;
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    color: #000000;
}

H1.headline {
    font-weight: 400;
    font-size: 48px;
    line-height: 56px;
}

H1 {
    font-weight: 700;
    font-size: 24px;
    line-height: 32px;
}

H2 {
    font-weight: 700;
    font-size: 20px;
    line-height: 28px;
    letter-spacing: -0.01em;
}

H3 {
    font-weight: 700;
    font-size: 16px;
    line-height: 24px;
}

body{
    font-size: 14px;
    line-height: 20px;
}

p.small {
    font-weight: 400;
    font-size: 12px;
    line-height: 16px;
}


@media only screen and (min-width: 992px) {
    H1.headline {
        font-size: 48px;
        line-height: 56px;
        letter-spacing: -0.03em;
    }

    H1 {
        font-size: 36px;
        line-height: 44px;
        letter-spacing: -0.02em;
    }

    H2 {
        font-size: 28px;
        line-height: 36px;
        letter-spacing: -0.01em;
    }

    H3 {
        font-size: 18px;
        line-height: 24px;
    }

    body{
        font-size: 16px;
        line-height: 24px;
    }

    p.small {
        font-size: 14px;
        line-height: 20px;
    }

}
/* helpers */
.inline-block {
    display: inline-block !important;
}


/* remove bar & replace with padding */
.homepage [role=main] {
    padding: 0;
}

.promoted-background {
    width: 100%;
    background-color: var(--primary-navy);
    color: #FFFFFF;
    position: relative;
    overflow: hidden;
}

.promoted-container {
    background-color: var(--primary-navy);
    position: relative;
    z-index: 2;
}

.promoted-left .headline {
    font-size: 48px;
    font-weight: 400;
    line-height: 56px;
    letter-spacing: -0.03em;
    text-align: left;

}

#NavbarBrandingContainer {
    position:absolute;
    top: 8px;
    left: 0px;
}

#NavbarLogo {
    display:  inline-block;
    height: 64px;
    padding-right: 19px;
}

#LogoBorder {
   display:  inline-block;
}

#NavbarHeadingContainer {
    line-height: 20px;
    font-weight: 700;
    font-size: 14px;
    color: #008dc9;
    margin:  10px;
    display:  inline-block;
    vertical-align:  middle;
}


#NavbarHeadingContainer H1 {
    font-weight: normal;
    letter-spacing: 0.00em;
}

#NavbarHeadingContainer .title {
    font-weight: 700;
    font-size: 18px;
    line-height: 20px;
    color: var(--primary-navy);
}

#NavbarHeadingContainer .subtitle {
    font-size: 14px;
    color: #212121;
}

@media only screen and (min-width: 992px){
    .masthead .navbar-collapse{
        padding-top: var(--masthead-menu-padding-top);
        display: flex !important;
    }
}

.masthead .navbar{
    margin-bottom: 0px;
    min-height: 80px;
}

.navbar-nav{
    margin: 0px;
}

.navbar-light .navbar-toggler {
    background: white;
    border: none;
    font-size: 20px;
    padding: 5px 10px;
    position:absolute;
    top:25px;
    right: 0px;
}

.fa-bars {
    color: var(--primary-navy) !important;
}

.masthead .main-navbar .navbar-nav > li > a
{
    font-style: normal;
    font-weight: 700;
    font-size: 14px;
    line-height: 30px;
    color: var(--primary-navy);
    flex: none;
    order: 1;
    flex-grow: 0;
    background-color: transparent;
    padding: 5px 0px;
    margin-left: 30px;
}

@media only screen and (max-width: 990px) {
    .masthead .main-navbar .navbar-nav > li > a {
        margin-left: 0;
    }
    .promoted-right .lens-btn {
        padding-left: 12px !important;
        padding-right: 12px !important;
        background: none;
        outline: none;
        border: 1px solid var(--who-blue-ten-percent);
        border-left: none;

    }
    #field-giant-search {
        border: 1px solid var(--who-blue-ten-percent);
        border-right: none;
    }

    .lens-btn .search-label{
        display: none;
    }
}



.masthead .main-navbar .navbar-nav li a:hover,
.masthead .main-navbar .navbar-nav li a:focus,
.masthead .main-navbar .navbar-nav li.active a,
.masthead .main-navbar ul li:hover a,
.masthead .main-navbar ul li:focus a,
.masthead .main-navbar ul li.active a
{
    color: var(--who-blue-65-percent);
    background-color: transparent;

}

.masthead .site-search {
    margin: 5px 0px 5px 30px;
}
/* ... */

